[package]
name = "persist-core"
version = "0.1.0"
edition = "2018"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
description = "Core library for persist, the process manager"
repository = "https://github.com/Hirevo/persist"
categories = ["command-line-utilities"]
keywords = ["process", "system", "monitor"]
license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0.24"

tokio-util = { version = "0.6.5", features = ["codec"] }
json = { package = "serde_json", version = "1.0.64" }
heim = "0.0.11"
nix = "0.20.0"
dirs-next = "2.0.0"
