[package]
name = "persist-core"
version = "0.1.0"
edition = "2018"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
description = "Core library for persist, the process manager"
repository = "https://github.com/Hirevo/persist"
categories = ["command-line-utilities"]
keywords = ["process", "system", "monitor"]
license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
thiserror = "1.0.49"

tokio-util = { version = "0.7.9", features = ["codec"] }
json = { package = "serde_json", version = "1.0.107" }
heim = { version = "0.1.0-rc.1", default-features = false, features = ["process"] }
nix = "0.27.1"
dirs-next = "2.0.0"
