[package]
name = "persist-daemon"
version = "0.1.0"
edition = "2018"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
description = "Daemon for persist, the process manager"
repository = "https://github.com/Hirevo/persist"
categories = ["command-line-utilities"]
keywords = ["process", "system", "monitor"]
license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# internal
persist-core = { path = "../persist-core" }

# runtime
tokio = { version = "1.4.0", features = ["full"] }
tokio-util = { version = "0.6.5", features = ["codec"] }
futures = "0.3.13"

# process/system monitoring
heim = "0.0.11"

# CLI helpers
structopt = "0.3.21"

# (de)serialization
serde = { version = "1.0.125", features = ["derive"] }
json = { package = "serde_json", version = "1.0.64" }
bytes = "1.0.1"

# misc
chrono = { version = "0.4.19", features = ["serde"] }
nix = "0.20.0"
