[package]
name = "persist-daemon"
version = "0.1.0"
edition = "2018"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
description = "Daemon for persist, the process manager"
repository = "https://github.com/Hirevo/persist"
categories = ["command-line-utilities"]
keywords = ["process", "system", "monitor"]
license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# internal
persist-core = { path = "../persist-core" }

# runtime
tokio = { version = "1.22.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
futures = "0.3.25"

# process/system monitoring
heim = { version = "0.1.0-rc.1", default-features = false, features = ["process"] }

# CLI helpers
structopt = "0.3.26"

# (de)serialization
serde = { version = "1.0.147", features = ["derive"] }
json = { package = "serde_json", version = "1.0.89" }
bytes = "1.3.0"

# misc
chrono = { version = "0.4.23", features = ["serde"] }
nix = "0.25.0"
