[package]
name = "persist-daemon"
version = "0.1.0"
edition = "2018"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
description = "Daemon for persist, the process manager"
repository = "https://github.com/Hirevo/persist"
categories = ["command-line-utilities"]
keywords = ["process", "system", "monitor"]
license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# internal
persist-core = { path = "../persist-core" }

# runtime
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["codec"] }
futures = "0.3.28"

# process/system monitoring
sysinfo = "0.29.10"
nix = { version = "0.27.1", features = ["signal", "process"] }
libc = "0.2.148"

# CLI helpers
structopt = "0.3.26"

# (de)serialization
serde = { version = "1.0.188", features = ["derive"] }
json = { package = "serde_json", version = "1.0.107" }
bytes = "1.5.0"

# misc
chrono = { version = "0.4.31", features = ["serde"] }
