[package]
name = "persist"
version = "0.1.0"
edition = "2018"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
description = "A fast and simple asynchronous process manager"
repository = "https://github.com/Hirevo/persist"
categories = ["command-line-utilities"]
keywords = ["process", "system", "monitor"]
license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# internal
persist-core = { path = "../persist-core" }

# runtime
tokio = { version = "1.22.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
futures = "0.3.25"

# CLI helpers
structopt = "0.3.26"
prettytable-rs = "0.9.0"
humansize = "2.1.2"
colored = "2.0.0"

# (de)serialization
serde = { version = "1.0.147", features = ["derive"] }
json = { package = "serde_json", version = "1.0.89" }

# miscellaneous
chrono = { version = "0.4.23", features = ["serde"] }
dirs-next = "2.0.0"
